[package]
name = "racing-wheel-hid-accuforce-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "SimExperience AccuForce USB HID protocol constants and device classification"

[lints.rust]
warnings = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"

[dependencies]
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
insta = "1.44.1"
proptest = { workspace = true }
