[package]
description = "hid-asetek-protocol - part of OpenRacing"
name = "hid-asetek-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
openracing-hid-common = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
quickcheck = { workspace = true }
insta = { version = "1.44.1", features = ["yaml"] }
