[package]
name = "racing-wheel-hid-fanatec-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
warnings = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"

[dependencies]
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { version = "1.44.1", features = ["yaml"] }
