[package]
name = "racing-wheel-hid-leo-bodnar-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Leo Bodnar USB interface HID protocol constants and device classification"

[lints.rust]
warnings = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"

[dependencies]

[dev-dependencies]
proptest = { workspace = true }
insta = { version = "1.44.1", features = ["yaml"] }
