[package]
name = "racing-wheel-hid-moza-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
warnings = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"

[dependencies]
racing-wheel-hbp = { workspace = true }
racing-wheel-ks = { workspace = true }
racing-wheel-moza-wheelbase-report = { workspace = true }
racing-wheel-srp = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
