[package]
name = "racing-wheel-hid-moza-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
warnings = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
racing-wheel-hbp = { workspace = true }
racing-wheel-ks = { workspace = true }
racing-wheel-moza-wheelbase-report = { workspace = true }
racing-wheel-srp = { workspace = true }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
insta = { version = "1.44.1", features = ["yaml"] }
