[package]
name = "racing-wheel-hid-pxn-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "PXN V10/V12 direct drive wheel HID PIDFF protocol implementation"

[lints.rust]
warnings = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"

[dependencies]
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
insta = { version = "1.44.1", features = ["yaml"] }
