[package]
name = "racing-wheel-hid-pxn-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "PXN racing wheel USB HID protocol constants (I/O-free, allocation-free)"
repository = "https://github.com/openracing/openracing"


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dev-dependencies]
proptest = { workspace = true }

[dependencies]
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
