[package]
description = "racing-wheel-integration-tests - part of OpenRacing"
name = "racing-wheel-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Lint gates for integration tests
[lints.rust]
warnings = "deny"
unused_must_use = "deny"
rust_2018_idioms = "deny"

[lints.clippy]
unwrap_used = "deny"
print_stdout = "deny"

[dependencies]
racing-wheel-engine = { path = "../engine", version = "0.1.0" }
racing-wheel-service = { path = "../service", version = "0.1.0" }
racing-wheel-schemas = { path = "../schemas", version = "0.1.0" }
racing-wheel-telemetry-adapters = { path = "../telemetry-adapters", version = "0.1.0" }
racing-wheel-telemetry-config = { path = "../telemetry-config", version = "0.1.0" }
racing-wheel-telemetry-config-writers = { path = "../telemetry-config-writers", version = "0.1.0" }
racing-wheel-telemetry-support = { path = "../telemetry-support", version = "0.1.0" }
racing-wheel-hid-moza-protocol = { path = "../hid-moza-protocol", version = "0.1.0" }
racing-wheel-hid-fanatec-protocol = { path = "../hid-fanatec-protocol", version = "0.1.0" }
racing-wheel-hid-logitech-protocol = { path = "../hid-logitech-protocol", version = "0.1.0" }
racing-wheel-hid-openffboard-protocol = { path = "../hid-openffboard-protocol", version = "0.1.0" }
racing-wheel-hid-ffbeast-protocol = { path = "../hid-ffbeast-protocol", version = "0.1.0" }
racing-wheel-simplemotion-v2 = { path = "../simplemotion-v2", version = "0.1.0" }
tokio = { workspace = true, features = ["full"] }
tokio-test = "0.4.5"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = "0.2.5"

# Testing frameworks
criterion = { workspace = true, features = ["html_reports"] }
proptest = { workspace = true }
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"

# Performance and timing
parking_lot = { workspace = true }
crossbeam = { workspace = true }
hdrhistogram = { workspace = true }
statistical = { workspace = true }

# Test utilities
tempfile = "3.24.0"
uuid = { workspace = true }
rand = "0.9.2"
chrono = { workspace = true }
openracing-test-helpers = { workspace = true }

# Mock and test doubles
async-trait = { workspace = true }
mockall = { workspace = true }
wiremock = { workspace = true }

# System monitoring
sysinfo = { workspace = true }
num_cpus = { workspace = true }

# CLI for binaries
clap = { workspace = true }

workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_System_SystemServices", 
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_Security",
    "Win32_System_Power",
    "Win32_System_Diagnostics_Etw",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

[[bin]]
name = "soak-test"
path = "src/bin/soak_test.rs"

[[bin]]
name = "performance-gate"
path = "src/bin/performance_gate.rs"

[[bin]]
name = "hotplug-stress"
path = "src/bin/hotplug_stress.rs"

[features]
default = []
ci-gates = []
soak-tests = []
stress-tests = []
