[package]
name = "racing-wheel-ks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
warnings = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
