[package]
description = "racing-wheel-moza-wheelbase-report - part of OpenRacing"
name = "racing-wheel-moza-wheelbase-report"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
warnings = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"

[dev-dependencies]
proptest = { workspace = true }

[dependencies]
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

