[package]
name = "racing-wheel-moza-wheelbase-report"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
warnings = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dev-dependencies]
proptest = { workspace = true }
insta = { version = "1.44.1", features = ["yaml"] }

[dependencies]
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

