[package]
name = "openracing-binary-signature"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
goblin = "0.9"
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
