[package]
name = "openracing-calibration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
quickcheck = { workspace = true }
