[package]
name = "openracing-capture-format"
description = "Structured capture format for USB HID reports — enables protocol reverse-engineering and validation without physical hardware."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }

# Protocol crates used in replay integration tests
racing-wheel-hid-cammus-protocol = { path = "../hid-cammus-protocol" }
racing-wheel-hid-fanatec-protocol = { path = "../hid-fanatec-protocol" }
racing-wheel-hid-simagic-protocol = { path = "../hid-simagic-protocol" }
racing-wheel-hid-thrustmaster-protocol = { path = "../hid-thrustmaster-protocol" }
racing-wheel-hid-vrs-protocol = { path = "../hid-vrs-protocol" }
