[package]
name = "openracing-capture-ids"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
crc32fast = { workspace = true }
hidapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

