[package]
name = "openracing-device-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
proptest = ["dep:proptest"]

[dependencies]
racing-wheel-schemas = { path = "../schemas" }
proptest = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
quickcheck = { workspace = true }
