[package]
name = "openracing-diagnostic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Diagnostic recording and replay system for OpenRacing"
keywords = ["diagnostic", "blackbox", "replay", "recording", "real-time"]
categories = ["development-tools::debugging", "aerospace::simulation"]

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crc32c = "0.6.8"
flate2 = "1.1.8"
zip = "7.2.0"
sysinfo = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile = "3.24.0"
proptest = { workspace = true }
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
criterion = { workspace = true }
insta = "1.42.2"

[features]
default = ["std"]
std = []

[[bench]]
name = "recording_throughput"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
