[package]
name = "openracing-errors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Centralized error types for OpenRacing"
keywords = ["error", "error-handling", "real-time", "racing"]
categories = ["rust-patterns", "no-std"]


[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
insta = "1.42.2"

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
